--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   },
   "standard": {
     "globals": [
-      "opts"
     ]
   },
   "lint-staged": {
@@ -46,11 +45,6 @@
     "singleQuote": true
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "dob": "^2.5.8",
-    "normalize.css": "^8.0.0",
-    "riot": "^3.10.1",
-    "riot-route": "^3.1.4"
+    "riot": "^3.10.1"
   }
 }
